<resources>
    <string name="app_name">Makgeolli Guru</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="sweet">Sweet</string>
    <string name="acidity">Acidity</string>
    <string name="texture">Body</string>
    <string name="sparkling">Sparkling</string>
    <string name="fruity">Fruity</string>
    <string name="favorite">Favorite</string>
    <string name="filter">Filter</string>
    <string name="nuts">Nuts</string>
    <string name="learnmore">Click to learn more</string>

    <string name="makgeolli_information">Makgeolli informations</string>

    <string name="makgeolli_map">Makgeolli map</string>
    <string name="learning">Learning</string>
    <string name="profile">Makgeolli profile</string>

    <string name="article1">How to make makgeolli?</string>
    <string name="article2">Makgeolli-food good match</string>
    <string name="article3">Makgeolli profile region</string>
    <string name="article4">Makgeolli event</string>
    <string name="article5">Associations</string>


    <string name="test_knowledge_link">Test your knowledge</string>
    <string name="test_personality_link">Get your Makgeolli profile</string>
    <string name="profile_part1">Your are :</string>
    <string name="profile_character">Your character :</string>
    <string name="profile_description_sour">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut dictum rutrum augue in venenatis. Praesent nec rhoncus nisi</string>

    <string name="more_info">More information</string>
    <string name="alcool_percentage">Alcool percentage:</string>
    <string name="ingredients">Ingredients:</string>
    <string name="localisation">Localisation:</string>
    <string name="more_infos">More information:</string>
    <string name="favorite_link">favorite</string>
    <string name="sparkling_profile">You might enjoy a makgeolli that fits well with outdoor activities, perhaps a sparkling and refreshing option.</string>
    <string name="fruity_profile">A smooth and contemplative makgeolli with fruity or sour notes could be your ideal choice.</string>
    <string name="sweet_profile">A lively and sociable makgeolli with sweet and light-hearted characteristics may suit your taste.</string>
    <string name="other_profile">Your preferences are diverse. You may enjoy exploring different types of makgeolli.;</string>
    <string name="sparkling_name">Sparkling Makgeolli</string>
    <string name="fruity_name">Fruity Makgeolli</string>
    <string name="sweet_name">Nuts Makgeolli</string>
    <string name="search">search</string>
    <string name="Error">Error</string>
    <string name="error_favorite_list">\"You don\'t have favorite makgeolli."\</string>
    <string name="error_makgeolli_list">"Did not match any Makgeolli"\</string>
    <string name="saved">Saved\n</string>
    <string name="clear">Clear</string>
    <string name="makgeolli">makgeolli</string>

</resources>