<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#035460"
            android:orientation="horizontal"
            android:padding="5dp"
            tools:ignore="MissingConstraints">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:padding="1dp"
                android:src="@drawable/map"

                app:tint="@android:color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/makgeolli_map"
                android:textColor="@color/white"
                android:textSize="20dp" />
        </LinearLayout>
        <!-- TODO: Update blank fragment layout -->
        <fragment xmlns:map="http://schemas.android.com/apk/res-auto"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            map:cameraZoom="6"
            map:liteMode="false"
            map:mapType="normal"
            tools:layout="@layout/fragment_map_" />

    </LinearLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"

        android:layout_weight="1"
        android:layout_x="10dp"
        android:layout_y="50dp"
        app:chipSpacingVertical="0dp">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipFruity"
            style="@style/ThinnerChip"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:padding="0dp"
            android:text="@string/fruity"
            android:textAlignment="center"
            app:chipStartPadding="10dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSour"
            style="@style/ThinnerChip"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/acidity"
            android:textAlignment="center" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSparkling"
            style="@style/ThinnerChip"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/sparkling"
            android:textAlignment="center" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipNuts"
            style="@style/ThinnerChip"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/nuts"
            android:textAlignment="center" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSweet"
            style="@style/ThinnerChip"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/sweet"

            android:textAlignment="center" />

        <com.google.android.material.chip.Chip
            android:id="@+id/favorite"
            style="@style/ThinnerChip"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:icon="@android:drawable/btn_star_big_on"
            android:text="@string/favorite"

            android:textAlignment="center" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipFilter"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blueLight"
            android:text="@string/filter"
            android:textAlignment="center" />
    </com.google.android.material.chip.ChipGroup>


    <ImageButton
        android:id="@+id/updatebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="20dp"
        app:srcCompat="@android:drawable/ic_popup_sync" />

</RelativeLayout>
