<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:scrollbars="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#035460"
        android:padding="5dp">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:src="@drawable/book"
            android:layout_gravity="left"
            android:padding="1dp"
            app:tint="@android:color/white"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/learning"
            android:textColor="@color/white"
            android:textSize="20dp" />

    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_gravity="center|top"
        android:layout_marginTop="20dp"
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:backgroundTint="#D1FFFD"
        android:clickable="true"
        android:id="@+id/card1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_gravity="left"
            android:padding="2dp"
            android:id="@+id/image1"
            />

        <TextView
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:text="@string/article1"
            android:textSize="16dp"
            android:gravity="center"
            android:layout_gravity="right"
            android:textColor="#035460"
            android:id="@+id/article1"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_gravity="center|top"
        android:layout_marginTop="20dp"
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:backgroundTint="#D1FFFD"
        android:clickable="true"
        android:id="@+id/card2">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_gravity="left"
            android:padding="2dp"
            />

        <TextView
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:text="@string/article2"
            android:textSize="16dp"
            android:gravity="center"
            android:layout_gravity="right"
            android:textColor="#035460"
            android:padding="10dp"
            android:id="@+id/article2"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_gravity="center|top"
        android:layout_marginTop="20dp"
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:backgroundTint="#D1FFFD"
        android:clickable="true"
        android:id="@+id/card3">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_gravity="left"
            android:padding="2dp"
            />

        <TextView
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:text="@string/article3"
            android:textSize="16dp"
            android:gravity="center"
            android:textColor="#035460"
            android:layout_gravity="right"
            android:padding="10dp"
            android:id="@+id/article3"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card4"
        android:layout_gravity="center|top"
        android:layout_marginTop="20dp"
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:backgroundTint="#D1FFFD"
        android:clickable="true">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_gravity="left"
            android:padding="2dp"
            />

        <TextView
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:text="@string/article4"
            android:textSize="16dp"
            android:gravity="center"
            android:layout_gravity="right"
            android:textColor="#035460"
            android:padding="10dp"
            android:id="@+id/article4"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_gravity="center|top"
        android:layout_marginTop="20dp"
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:backgroundTint="#D1FFFD"
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/card5">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_gravity="left"
            android:padding="2dp"
            />

        <TextView
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:text="@string/article5"
            android:textSize="16dp"
            android:gravity="center"
            android:layout_gravity="right"
            android:textColor="#035460"
            android:padding="10dp"
            android:id="@+id/article5"/>

    </androidx.cardview.widget.CardView>

</LinearLayout>

