<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:layout_gravity="center_horizontal"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="#000"
            android:textSize="14sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sweet"
            android:layout_width="62dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/sweet"
            android:textColor="#000"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/ratingBarSweet"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:numStars="5"
            android:rating="2.0"
            android:stepSize="1.0"
            style = "?android:attr/ratingBarStyleSmall" />

        <TextView
            android:id="@+id/acidity"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/acidity"
            android:textColor="#000"
            android:textSize="14sp"
            android:textStyle="bold" />
        <RatingBar
            android:id="@+id/ratingBarAcidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1.0"
            android:rating="2.0"
            style = "?android:attr/ratingBarStyleSmall"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/texture"
            android:layout_width="62dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/texture"
            android:textColor="#000"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/ratingBarTexture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:rating="2.0"
            android:stepSize="1.0"
            style = "?android:attr/ratingBarStyleSmall"/>

        <TextView
            android:id="@+id/sparkling"
            android:layout_width="71dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/sparkling"
            android:textColor="#000"
            android:textSize="14sp"
            android:textStyle="bold" />
        <RatingBar
            android:id="@+id/ratingBarSparkling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1.0"
            android:rating="2.0"
            style = "?android:attr/ratingBarStyleSmall"/>
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="10"
            android:textColor="#000"
            android:gravity="center"
            android:textSize="14sp"
            android:id="@+id/snippet"
            android:layout_margin="5dp"
            android:text="@string/learnmore"
            android:padding="5dp"
          />

    </LinearLayout>

</LinearLayout>