<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile_Fragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#035460"
        android:padding="5dp">
        <ImageView
            android:layout_width="80dp"
            android:padding="1dp"
            android:layout_height="match_parent"
            android:src="@drawable/user"
            android:layout_gravity="left"

            app:tint="@android:color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textSize="20dp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_card_view"
        android:layout_gravity="center|top"
        android:layout_marginTop="20dp"
        android:layout_height="250dp"
        android:layout_width="320dp"
        android:backgroundTint="#D1FFFD">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:orientation="vertical">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:orientation="horizontal">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
                android:layout_gravity="center">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_part1"
                        android:textSize="20dp"
                        android:layout_marginLeft="20dp"
                        android:textColor="#035460"/>

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_name_sour"
                        android:textSize="20dp"
                        android:layout_marginLeft="20dp"
                        android:textColor="#035460"/>
                </LinearLayout>
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:src="@drawable/logo"
                    android:layout_marginLeft="30dp"
                    android:layout_margin="5dp"
                    />
            </LinearLayout>
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_character"
                    android:textSize="20dp"
                    android:layout_marginLeft="20dp"
                    android:textColor="#035460"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_description_sour"
                    android:textSize="14dp"
                    android:layout_marginLeft="20dp"
                    android:textColor="#035460"/>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_gravity="center|top"
        android:layout_marginTop="20dp"
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:backgroundTint="#D1FFFD">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:text="@string/test_personality_link"
                android:textSize="16dp"
                android:gravity="center"
                android:padding="20dp"
                android:textColor="#035460"
                />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="50dp"
                android:layout_margin="10dp"
                android:layout_height="match_parent"
                android:src="@android:drawable/ic_menu_send" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_gravity="center|top"
        android:layout_marginTop="20dp"
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:backgroundTint="#D1FFFD">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:text="@string/test_knowledge_link"
                android:textSize="16dp"
                android:gravity="center"
                android:padding="20dp"
                android:textColor="#035460"
                />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="50dp"
                android:layout_margin="10dp"
                android:layout_height="match_parent"
                android:src="@android:drawable/ic_menu_send" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>

</FrameLayout>